--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -1,3 +1,34 @@
-span {
-  white-space: pre;
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-parent {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+  background: #eee;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.cat-parent {
+  position: fixed;
+  width: 15%;
+  height: 100%;
+  background-color: green;
+  top: 3.8em;
+  left: 0;
+}
+.categories{
+  display: flex;
+  margin-top: 4em;
+  flex-direction: column;
 }
