--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -50,6 +50,7 @@ button {
   border: 2px solid black;
   font-size: 15px;
   margin:-8px 50px 0 0;
+  box-shadow: 3px 3px 3px black;
 }
 
 button:active {
