--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -4,7 +4,7 @@
 * {
   box-sizing: border-box;
 }
-html, body, #container {
+html, body{
   height: 100%;
 }
 
@@ -24,11 +24,23 @@ a {
   white-space: pre;
 }
 
+h1{
+  margin: 0;
+}
+
+li{
+  margin: 0 0 10px 5px;
+}
+
 /* =================================
   Base Layout Styles
 ==================================== */
 
 /* ---- Header ---- */
+.header-parent{
+  position: fixed;
+  width: 100%
+}
 
 .main-header {
   margin: 0;
@@ -61,26 +73,35 @@ button:focus {
   outline:0;
 }
 
-/*.cat-parent {
+/* ---- sidebar ---- */
+.cat-parent {
   position: fixed;
   width: 15%;
   height: 100%;
-  background-color: green;
-  top: 3.8em;
   left: 0;
+  margin-top: 32px;
 }
+
 .categories{
   display: flex;
-  width: 400px;
-  height: 400px;
+  height: 100%;
   flex-direction: column;
 }
 
+.categories h1 {
+  margin-bottom: 10px;
+  border-bottom: 2px solid black;
+}
+.categories li{
+  font-size: 20px;
+}
+
+
+
 .main-content {
   display: flex;
-
 }
 
 .allmovies{
   flex-direction: row;
-}*/
+}
