--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -40,9 +40,11 @@ li{
 .header-parent{
   position: fixed;
   width: 100%
+
 }
 
 .main-header {
+  background-color: white;
   margin: 0;
   padding: 8px 0 8px 0;
   height: 32px;
@@ -74,18 +76,17 @@ button:focus {
 }
 
 /* ---- sidebar ---- */
-.cat-parent {
+/*.cat-parent {
   position: fixed;
-  width: 15%;
+  width: 18%;
   height: 100%;
   left: 0;
   margin-top: 32px;
 }
 
-.categories{
-  display: flex;
+.categories {
   height: 100%;
-  flex-direction: column;
+  border-right: 2px solid black;
 }
 
 .categories h1 {
@@ -94,14 +95,18 @@ button:focus {
 }
 .categories li{
   font-size: 20px;
-}
-
-
-
-.main-content {
+}*/
+.afterHeader{
   display: flex;
 }
 
-.allmovies{
-  flex-direction: row;
+.categories{
+  flex-grow: 0.5;
+}
+.allmovies {
+  flex-grow: 3;
+}
+
+.allmovies {
+  margin-top: 32px;
 }
