--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -38,9 +38,9 @@ li{
 
 /* ---- Header ---- */
 .header-parent{
+  z-index: 2;
   position: fixed;
   width: 100%
-
 }
 
 .main-header {
@@ -76,11 +76,6 @@ button:focus {
 }
 
 /* ---- sidebar ---- */
-/*.categories h1 {
-  width: 350px;
-  border-bottom: 2px solid black;
-}*/
-
 
 .afterHeader {
   display: flex;
@@ -96,22 +91,24 @@ button:focus {
   font-size: 70px;
 }
 
-.categories, .allmovies {
+.categories, .allmovies{
   margin-top: 32px;
 }
 
 .categories {
   position: fixed;
   height: 100%;
+  width: 100%;
 }
 
-.cat-header {
-  margin-top: 32px;
-  background: gray;
+.categories h1 {
+  background-color: grey;
   border-bottom: 2px solid black;
 }
 
 .allmovies {
   flex-grow: 3;
-  margin-left: 30px;
+  padding-left: 30px;
+  z-index: 1;
+  background-color: white;
 }
