--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -50,16 +50,16 @@ li{
   height: 32px;
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid black;
+  border-bottom: 4px solid black;
 }
 
 a {
-  font-size: 28px;
+  font-size: 26px;
   margin:-10px 0 0 30px;
 }
 
 button {
-  height: 30px;
+  height: 28px;
   background-color: white;
   border: 2px solid black;
   font-size: 15px;
@@ -83,12 +83,8 @@ button:focus {
 
 .header-wrapper {
   flex: 0 0 100px;
-  border-right: 2px solid black;
+  border-right: 4px solid black;
   flex-grow: 0.5;
-}
-
-.allmoviesheader {
-  font-size: 70px;
 }
 
 .categories, .allmovies{
@@ -103,12 +99,52 @@ button:focus {
 
 .categories h1 {
   background-color: grey;
-  border-bottom: 2px solid black;
+  border-bottom: 4px solid black;
 }
+
+.categories li {
+  padding: 4px 0 0 7px;
+  font-size: 20px;
+}
+
+/* ---- main-section ---- */
 
 .allmovies {
   flex-grow: 3;
   padding-left: 30px;
   z-index: 1;
   background-color: white;
+}
+
+.allmoviesheader {
+  font-size: 70px;
+}
+
+.allmovies {
+  display: flex;
+  flex-direction: column;
+}
+
+#drama {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-info li {
+  display: inline-block;
+  flex-grow: 1;
+}
+
+.movie-info button {
+  margin: 10px 0 2px 0;
+}
+
+.movie-name {
+  margin-left: 20px;
+  font-size: 1.3em;
+}
+
+.time {
+  margin-left: 160px;
+
 }
