--- a/part-3/styles.css
+++ b/part-3/styles.css
@@ -4,18 +4,13 @@
 * {
   box-sizing: border-box;
 }
-html, body{
-  height: 100%;
-}
 
 body {
   margin: 0;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+html, body{
+  height: 100%;
 }
 
 a {
@@ -32,27 +27,17 @@ li{
   margin: 0 0 10px 5px;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 /* =================================
   Base Layout Styles
 ==================================== */
 
 /* ---- Header ---- */
-.header-parent{
-  z-index: 2;
-  position: fixed;
-  width: 100%
-}
-
-.main-header {
-  background-color: white;
-  margin: 0;
-  padding: 8px 0 8px 0;
-  height: 32px;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 4px solid black;
-}
-
 a {
   font-size: 26px;
   margin:-10px 0 0 30px;
@@ -75,26 +60,36 @@ button:focus {
   outline:0;
 }
 
+.header-parent{
+  z-index: 2;
+  position: fixed;
+  width: 100%
+}
+
+.main-header {
+  background-color: white;
+  margin: 0;
+  padding: 8px 0 8px 0;
+  height: 32px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 4px solid black;
+}
+
 /* ---- sidebar ---- */
 
 .afterHeader {
   display: flex;
 }
 
-.header-wrapper {
-  flex: 0 0 100px;
-  border-right: 4px solid black;
-  flex-grow: 0.5;
-}
-
-.categories, .allmovies{
-  margin-top: 32px;
-}
-
 .categories {
   position: fixed;
   height: 100%;
   width: 100%;
+}
+
+.categories, .allmovies{
+  margin-top: 32px;
 }
 
 .categories h1 {
@@ -107,9 +102,22 @@ button:focus {
   font-size: 20px;
 }
 
+.header-wrapper {
+  flex: 0 0 100px;
+  border-right: 4px solid black;
+  flex-grow: 0.5;
+}
+
 /* ---- main-section ---- */
 
+a .allmovies{
+ margin: -15px 0 -25px 0;
+ font-size: 1em;
+}
+
 .allmovies {
+  display: flex;
+  flex-direction: column;
   flex-grow: 3;
   padding-left: 30px;
   z-index: 1;
@@ -118,11 +126,6 @@ button:focus {
 
 .allmoviesheader {
   font-size: 70px;
-}
-
-.allmovies {
-  display: flex;
-  flex-direction: column;
 }
 
 #drama {
@@ -146,11 +149,4 @@ button:focus {
 
 .time {
   margin-left: 160px;
-
-}
-
-.allmovies a {
-  margin: -15px 0 -25px 0;
-  font-size: 1em;
-
 }
